Creado el inicio.

--- a/cartelera/cartelera.html
+++ b/cartelera/cartelera.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="inicio.css">
-    <title>Cine DAW</title>
+    <link rel="stylesheet" href="cartelera.css">
+    <title>Cine DAW:cartelera</title>
 </head>
 <body>
     <header>
@@ -14,8 +14,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="cartelera/cartelera.html">Cartelera</a></li>
+            <li><a href="../inicio.html">Inicio</a></li>
+            <li><a href="#">Cartelera</a></li>
             <li><a href="https://goo.gl/maps/fAgTEUtVbyS5adrd9">Como llegar</a></li>
         </ul>
     </nav>
@@ -23,16 +23,5 @@
         <input type="text" name="search" placeholder="Buscar">
         <input type="submit" value="Buscar">
     </form>
-    <div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-    </div>
 </body>
 </html>
