Pagina inicio practicamente terminada.

--- a/inicio.html
+++ b/inicio.html
@@ -23,16 +23,26 @@
         <input type="text" name="search" placeholder="Buscar">
         <input type="submit" value="Buscar">
     </form>
-    <div>
+    <div class="content">
         <div>
-
+            <h3>Sed sed.</h3>
+            <p>Nunc quis laoreet quam, vel sollicitudin augue. Nam sagittis elementum sem at posuere. Duis tincidunt elit eros, at varius magna faucibus sit amet. Nam mattis ac lorem in dictum. Nullam condimentum sit amet turpis eget dapibus. Praesent fermentum mollis nisl eu suscipit. Ut vel sollicitudin odio. Nulla eget ornare mi, nec lacinia lorem. Duis justo odio, tincidunt id consequat interdum, viverra ac nulla. Curabitur eu quam dui. Proin vel malesuada eros, eget pulvinar nibh.</p>
+            <p>Aenean elementum viverra tempor. Curabitur scelerisque est eget mi euismod, eu hendrerit dolor posuere. Sed leo nisi, auctor et porta dictum, porta tincidunt leo. Duis maximus dapibus tempor. In a neque risus. Vivamus nec sagittis erat, id iaculis arcu. Proin vel justo varius, pretium felis non, laoreet justo. Sed dictum ante sed sodales sollicitudin. Etiam eu blandit velit, vel semper enim. Aenean nec malesuada tellus, sit amet blandit tortor. Aliquam metus risus, tincidunt eget pretium vitae, sodales quis purus.</p>
         </div>
         <div>
-
+            <h3>Suspendisse</h3>
+            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer sit amet elementum est, sit amet fermentum eros. In hac habitasse platea dictumst. Nam aliquam quam ante, ut consectetur purus pulvinar non. Aliquam ac feugiat augue, eget vestibulum justo. Nunc sed augue mi. Duis lacinia malesuada tellus nec dictum. Phasellus dapibus lectus eros, et feugiat augue molestie in. Nullam non enim lacus. Donec mollis, magna posuere dictum suscipit, lacus nisi pulvinar tellus, quis maximus odio mauris ac massa. Mauris sit amet tortor eu lorem porta elementum id non massa. Vivamus at egestas nulla. Aliquam a turpis ut eros fringilla tempor eget quis leo.</p>
+            <p>Cras sit amet tempor turpis. Nunc gravida nisl ac lorem convallis, in sagittis augue porttitor. Donec rutrum venenatis urna, vitae sollicitudin mauris fermentum non. Nunc quis blandit ex. Quisque rutrum dictum sagittis. Nulla in lobortis risus, sed pulvinar tellus. In mattis iaculis velit ac porttitor. Mauris pharetra, lorem ac viverra hendrerit, odio leo bibendum lacus, ut eleifend urna nisi vitae dolor. Sed pulvinar tellus ut tellus vulputate mollis. Aliquam erat volutpat. Vestibulum scelerisque sapien nec nisl tincidunt, pharetra lacinia massa faucibus. Proin tempor tempor tempor. Phasellus sem dui, feugiat ac ex lobortis, congue blandit orci. Donec et lobortis urna. Phasellus nunc sem, consectetur eu leo et, sollicitudin varius diam. In eu ante eu erat eleifend consectetur id a magna.</p>
         </div>
         <div>
-
+            <h3>Integer ac.</h3>
+            <p>Sed vitae ipsum a lacus varius consequat. Nullam vel orci fermentum, vestibulum nulla non, consectetur dolor. Donec vel sem ac mauris pellentesque mattis vel et dui. Morbi sagittis tempus ex vel consectetur. Quisque ut arcu et purus accumsan ornare in vel mi. Curabitur justo diam, consectetur sit amet scelerisque non, auctor eu sapien. Suspendisse luctus erat elit, nec accumsan tortor suscipit a. Nam pellentesque turpis vestibulum metus faucibus, non fermentum purus tempus. Nunc accumsan nisl sit amet elit condimentum, ut ultrices nibh pretium. Aenean ac convallis tellus. Nam viverra rutrum tristique.</p>
+            <p>Nunc risus magna, feugiat sed arcu id, egestas suscipit risus. Quisque varius elit nec erat aliquam tristique. Sed dignissim semper convallis. Pellentesque a ullamcorper elit. Donec quis porta quam. In semper urna ut augue gravida, ut rutrum arcu cursus. Etiam accumsan laoreet turpis, a tincidunt neque volutpat vel. Nullam efficitur vel sem at hendrerit. Nullam eu sollicitudin ipsum. Duis dolor libero, iaculis a est at, tincidunt placerat elit. Etiam massa lorem, mollis eu leo vitae, eleifend molestie tortor. Cras dui urna, imperdiet a massa a, aliquam suscipit felis. Sed libero nisi, auctor eu lacinia nec, pharetra non eros. Donec sodales scelerisque sem, congue laoreet lectus ornare non.</p>
         </div>
     </div>
+    <footer>
+        <p>Creado por Jose Mª Navarro Rodriguez</p>
+        <p>Copyright &copy  </p> 
+    </footer>
 </body>
 </html>
