Añadido el footer a cartelera.

--- a/cartelera/cartelera.html
+++ b/cartelera/cartelera.html
@@ -23,5 +23,9 @@
         <input type="text" name="search" placeholder="Buscar">
         <input type="submit" value="Buscar">
     </form>
+    <footer>
+        <p>Creado por Jose Mª Navarro Rodriguez</p>
+        <p>Copyright &copy  </p> 
+    </footer>
 </body>
 </html>
