Añadidos los carteles.

--- a/cartelera/cartelera.html
+++ b/cartelera/cartelera.html
@@ -23,6 +23,57 @@
         <input type="text" name="search" placeholder="Buscar">
         <input type="submit" value="Buscar">
     </form>
+    <div>
+        <div>
+            <img src="carteles/asbestas.jpg" alt="asbestas" height="300" width="200">
+            
+        </div>
+        <div>
+            <img src="carteles/asterixyobelix.jpg" alt="asterixyobelix" height="300" width="200">
+        </div>
+        <div>
+            <img src="carteles/avatar2.jpg" alt="avatar2" height="300" width="200">
+        </div>
+        <div> 
+            <img src="carteles/babylon.jpg" alt="babylon" height="300" width="200">
+        </div>
+        <div>
+            <img src="carteles/devotion.jpg" alt="devotion" height="300" width="200">
+        </div>
+        <div>
+            <img src="carteles/gatoconbotas.jpg" alt="gatoconbotas" height="300" width="200">
+        </div>
+        <div>
+            <img src="carteles/loboferoz.jpg" alt="loboferoz" height="300" width="200">
+        </div>
+        <div>
+            <img src="carteles/megan.jpg" alt="megan" height="300" width="200">
+        </div>
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
     <footer>
         <p>Creado por Jose Mª Navarro Rodriguez</p>
         <p>Copyright &copy  </p> 
