Empezando la parte horario

--- a/inicio.html
+++ b/inicio.html
@@ -18,6 +18,7 @@
             <li><a href="#">Inicio</a></li>
             <li><a href="cartelera/cartelera.html">Cartelera</a></li>
             <li><a href="https://goo.gl/maps/fAgTEUtVbyS5adrd9">Como llegar</a></li>
+            <li><a href="horario/horario.html">Horario</a></li>
         </ul>
     </nav>
     <form>
