--- a/cartelera/cartelera.html
+++ b/cartelera/cartelera.html
@@ -18,6 +18,7 @@
             <li><a href="../inicio.html">Inicio</a></li>
             <li><a href="#">Cartelera</a></li>
             <li><a href="https://goo.gl/maps/fAgTEUtVbyS5adrd9">Como llegar</a></li>
+            <li><a href="../horario/horario.html">Horario</a></li>
         </ul>
     </nav>
     <form>
