Creada la pagina horario

--- a/horario/horario.html
+++ b/horario/horario.html
@@ -36,46 +36,87 @@
           <th>Domingo</th>
         </tr>
         <tr>
-          <td>January</td>
-          <td>$100</td>
+          <td>As Bestas</td>
+          <td>15:30</td>
+          <td>16:30</td>
+          <td>15:30</td>
+          <td>16:30</td>
+          <td>15:30</td>
+          <td>-</td>
+          <td>16:30</td>
         </tr>
         <tr>
-          <td>February</td>
-          <td>$80</td>
+          <td>Astérix Y Obélix</td>
+          <td>16:00</td>
+          <td>17:30</td>
+          <td>-</td>
+          <td>16:30</td>
+          <td>16:00</td>
+          <td>16:15</td>
+          <td>16:00</td>
         </tr>
         <tr>
-            <td>February</td>
-            <td>$80</td>
+            <td>Avatar 2</td>
+            <td>18:00</td>
+            <td>18:00</td>
+            <td>18:00</td>
+            <td>18:00</td>
+            <td>18:00</td>
+            <td>18:00</td>
+            <td>18:00</td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$80</td>
+            <td>Babylon</td>
+            <td>18:30</td>
+            <td>18:30</td>
+            <td>18:30</td>
+            <td>18:30</td>
+            <td>18:30</td>
+            <td>18:30</td>
+            <td>18:30</td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$80</td>
+            <td>Devotion</td>
+            <td>17:15</td>
+            <td>17:15</td>
+            <td>17:15</td>
+            <td>17:15</td>
+            <td>17:15</td>
+            <td>17:15</td>
+            <td>17:15</td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$80</td>
+            <td>El Gato Con Botas</td>
+            <td>15:30</td>
+            <td>15:30</td>
+            <td>15:30</td>
+            <td>15:30</td>
+            <td>15:30</td>
+            <td>15:30</td>
+            <td>15:30</td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$80</td>
+            <td>Lobo Feroz</td>
+            <td>16:30</td>
+            <td>16:30</td>
+            <td>16:30</td>
+            <td>16:30</td>
+            <td>16:30</td>
+            <td>16:30</td>
+            <td>16:30</td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$80</td>
+            <td>Megan</td>
+            <td>21:00</td>
+            <td>21:00</td>
+            <td>21:00</td>
+            <td>21:00</td>
+            <td>21:00</td>
+            <td>21:00</td>
+            <td>21:00</td>
           </tr>
       </table>
-
-
-
-
-
-
-
-    <footer>
+<footer>
         <hr>
         <p>Creado por Jose Mª Navarro Rodriguez</p>
         <p>Copyright &copy  </p> 
