Creado el media query print del horario.

--- a/horario/horario.html
+++ b/horario/horario.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="horario.css">
+    <link rel="stylesheet" href="print.css" media="print">
     <title>Cine DAW:Horario</title>
 </head>
 <body>
