Arreglados los cambios del validador css y html.

--- a/horario/horario.html
+++ b/horario/horario.html
@@ -18,7 +18,7 @@
             <li><a href="../inicio.html">Inicio</a></li>
             <li><a href="../cartelera/cartelera.html">Cartelera</a></li>
             <li><a href="https://goo.gl/maps/fAgTEUtVbyS5adrd9">Como llegar</a></li>
-            <li><a href="http://">Horario</a></li>
+            <li><a href="#">Horario</a></li>
         </ul>
     </nav>
     <form>
